# dto/passcode.go
@@ -1,0 +1,5 @@
+package dto
+
+type Passcode struct {
+	Passcode string `json:"passcode"`
+}
